# swwws

./: .gitignore  CONFIGURATION.md  Cargo.toml  README.md  flake.nix  install.sh  quick-install.sh
examples/configs/: grouped.toml  independent.toml  synchronized.toml
swwws-cli/: Cargo.toml
swwws-cli/src/: main.rs
swwws-common/: Cargo.toml
swwws-common/src/: command_builder.rs  duration.rs  error.rs  executor.rs  image_discovery.rs  ipc.rs  lib.rs  queue.rs  state.rs  swww.rs  swww_client.rs
swwws-config/: Cargo.toml
swwws-config/src/: lib.rs  monitor_behavior_tests.rs
swwws-daemon/: Cargo.toml
swwws-daemon/src/: main.rs
