[package]
name = "swwws-common"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
humantime = { workspace = true }
humantime-serde = { workspace = true }
which = { workspace = true }
rand = { workspace = true }
log = "0.4"
dirs = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
rustix = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
