[package]
name = "swwws-config"
version.workspace = true
edition.workspace = true

[dependencies]
toml = { workspace = true }
serde = { workspace = true }
humantime-serde = { workspace = true }
dirs = { workspace = true }
log = { workspace = true }
swwws-common = { path = "../swwws-common" }

[dev-dependencies]
tempfile = "3.8"
