[package]
name = "swwws-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = "0.4"
env_logger = "0.10"

swwws-common = { path = "../swwws-common" }
swwws-config = { path = "../swwws-config" }
